# assignment_fine_tune

./: .gitignore  GPT_OSS_BNB_(20B)_Reasoning_Enhanced.ipynb  LICENSE  Presentation_V2.pptx  Presentation_V3.pptx  README.md  comparison final.ipynb  comparison.ipynb  comparisons.docx  considerations.txt  debug_leakage.py  debug_which_state.py  edited.docx  final_all_models_comparison.csv  fine_bert.ipynb  gptoss.ipynb  gptoss_2.ipynb  gptoss_final.ipynb  model_comparison_results.csv  pyproject.toml  report_final.docx  requirements.txt
resources/: anwesha_given_code_results.csv  final.docx  final_all_models_comparison.csv  final_all_models_comparison_final.csv  gpt_oss_results.csv  test_data.csv
