
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assignment"
version = "0.1.0"
description = "Notebook-based model comparison assignment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"accelerate==0.33.0",
	"datasets==4.6.1",
	"jupyter==1.1.1",
	"matplotlib==3.10.8",
	"numpy==1.26.4",
	"pandas==3.0.1",
	"scikit-learn==1.8.0",
	"seaborn==0.13.2",
	"torch==2.2.2",
	"tqdm==4.67.3",
	"transformers==4.44.0",
	"urllib3==1.26.20",
]
